[package]
name = "quic_file_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }       # Asynchronous runtime
quinn = "0.8"                                        # QUIC protocol implementation
rustls = "0.20"                                      # TLS implementation for Rust
rustls-pemfile = "1.0"                               # Utilities for reading PEM files
futures-util = "0.3"                                 # Utilities for working with futures
serde = { version = "1.0", features = ["derive"] }   # Serialization/deserialization framework
bincode = "1.3"                                      # Binary encoding library
structopt = "0.3"                                    # Command-line argument parsing
crc32fast = "1.2"                                    # CRC32 checksum calculation

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
